--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -10,8 +10,8 @@
 /Song.class
 /SpawningItem.class
 /menuImg.jpg
-/spectreleft.png
-/spectreright.jpg
-/spectreleft.jpg
 /reaper.png
+/spectreleft.png
 /spectreright.png
+/bulletleft.png
+/bulletright.png
