--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -16,3 +16,14 @@
 /reaper.png
 /spectreleft.png
 /spectreright.png
+/Zombie2.png
+/Zombie6GIF.gif
+/Zombie6.png
+/Zombie5.jpg
+/Zombie4.jpg
+/Zombie3.png
+/Zombie8.png
+/Zombie9.png
+/Zombie7.png
+/Zombie10.png
+/Zombie4.png
