--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,3 @@
-/Bullet.class
-/GameObject.class
 /Hecker.class
 /Horde.class
 /HordeRunner.class
@@ -9,21 +7,12 @@
 /SketcHex.class
 /Song.class
 /SpawningItem.class
-/Zombie1.png
-/bulletleft.png
-/bulletright.png
-/menuImg.jpg
-/reaper.png
-/spectreleft.png
-/spectreright.png
-/Zombie2.png
-/Zombie6GIF.gif
-/Zombie6.png
-/Zombie5.jpg
-/Zombie4.jpg
-/Zombie3.png
-/Zombie8.png
-/Zombie9.png
-/Zombie7.png
-/Zombie10.png
-/Zombie4.png
+/nuka-cola.jpg
+/bpGun.jpg
+/Healthpack.jpg
+/Not-found.jpg
+/atomicbomb.png
+/healthpack.jpg
+/healthpack.png
+/bpGun.png
+/nuka-cola.png
