Commit of (Almost) Parenthesis

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,18 +1,4 @@
-/Hecker.class
-/Horde.class
-/HordeRunner.class
-/ObjectManager.class
-/RiseOfPoke/
-/Room.class
-/SketcHex.class
-/Song.class
-/SpawningItem.class
-/nuka-cola.jpg
-/bpGun.jpg
-/Healthpack.jpg
-/Not-found.jpg
-/atomicbomb.png
-/healthpack.jpg
-/healthpack.png
-/bpGun.png
-/nuka-cola.png
+/Song$1.class
+/Fritz main title.mp3
+/main_title.mp3
+/fireplace.jpg
