Commit of (Even More) (Almost) Finality!
-Room graphics are up!
-item spawning chances are normalized (nothing-30%, hp-25%, bp-25%, n-10%, ns-10%)
(-cheat passwords are "SSC" and "peppermintHydra")
-"run!" starting room graphic, created by yours truly
__________________________
Horde Tamer (Horde Runner 2) coming  out 2018!
__________________________
_additional music and  horde chasing, as well as sinking into floor (the last is a must) should be resolved

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,29 @@
+/Bullet.class
+/GameObject.class
+/Hecker.class
+/Horde.class
+/HordeRunner.class
+/ObjectManager.class
+/RiseOfPoke/
+/Room.class
+/SketcHex.class
 /Song$1.class
-/Fritz main title.mp3
+/Song.class
+/SpawningItem.class
+/atomicbomb.png
+/bpGun.png
+/bulletleft.png
+/bulletright.png
+/fireplaceYTrim.png
+/healthpack.png
+/javazoom.jar
 /main_title.mp3
-/fireplace.jpg
+/menuImg.jpg
+/nuka-cola.png
+/reaper.png
+/spectreleft.png
+/spectreright.png
+/8bitfire.png
+/8bitvault.png
+/8bitquake.png
+/run.png
