--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,12 @@
+/8bitfire.png
+/8bitquake.png
+/8bitvault.png
 /Bullet.class
 /GameObject.class
 /Hecker.class
 /Horde.class
 /HordeRunner.class
+/Not-found.jpg
 /ObjectManager.class
 /RiseOfPoke/
 /Room.class
@@ -10,6 +14,16 @@
 /Song$1.class
 /Song.class
 /SpawningItem.class
+/Zombie1.png
+/Zombie10.png
+/Zombie2.png
+/Zombie3.png
+/Zombie4.png
+/Zombie5.jpg
+/Zombie6.png
+/Zombie7.png
+/Zombie8.png
+/Zombie9.png
 /atomicbomb.png
 /bpGun.png
 /bulletleft.png
@@ -21,9 +35,8 @@
 /menuImg.jpg
 /nuka-cola.png
 /reaper.png
+/run.png
 /spectreleft.png
 /spectreright.png
-/8bitfire.png
-/8bitvault.png
-/8bitquake.png
-/run.png
+/Fritz game battle better.mp3
+/game_theme.mp3
